@@ -1,5 +1,7 @@
 - adapt to perl 5.10.0
 - create /dev/cdrom symlink for installer (#36703)
+- do not put "windows" entry in bootloader for partitions where Windows is not
+  present (#8086)
 
 Version 10.6.5 - 14 January 2008
 
